[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://imports/oldcharacter.png" type="Texture" id=2]
[ext_resource path="res://hitandhurt/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://imports/dash_particle.png" type="Texture" id=4]
[ext_resource path="res://Player/dash_sprite.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 10.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.71684, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.41
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.0
angular_velocity = -182.07
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 1 )
dash_object = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 1, -6 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="dash_timer" type="Timer" parent="."]

[node name="dash_particles" type="Particles2D" parent="."]
emitting = false
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="hurtbox"]
